# 6dof_orbit_sim

./: CMakeLists.txt  todo.txt
include/6dof_orbit_sim/: attitude_dynamics.hpp  attitude_state.hpp  elements.hpp  ode_solvers.hpp  state_conversions.hpp  translational_dynamics.hpp  translational_state.hpp  types.hpp
src/: attitude_dynamics.cpp  elements.cpp  state_conversions.cpp  translational_dynamics.cpp
tests/: CMakeLists.txt  test_state_conversions.cpp  test_translational_dynamics.cpp
